--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <div id="content-container">
       <h1>Stay updated!</h1>
       <section>
-        <p>Join 60,000+ product managers receiving monthly updates on:</p>
-        <ul>
+        <p id="text-container">Join 60,000+ product managers receiving monthly updates on:</p>
+        <ul class="custom-list">
           <li>Product discovery and building what matters</li>
           <li>Measuring to ensure updates are a success</li>
           <li>And much more!</li>
         </ul>
       </section>
       <form id="form" action="/action_page.php">
-          <label for="email">Email address</label>
-          <input id="email" type="email" name="email" placeholder="email@company.com" aria-describedby="email-error"/>
-          <span aria-live="polite" id="email-error"></span>
-        <button type="submit">Subscribe to monthly newsletter</button>
+        <label for="email">Email address</label>
+        <input id="email" type="email" name="email" placeholder="email@company.com" aria-describedby="email-error"/>
+        <span aria-live="polite" id="email-error"></span>
+        <input id="button" type="submit" value="Subscribe to monthly newsletter"/>
       </form>
     </div>
     <!-- Sign-up form end -->
