--- a/index.html
+++ b/index.html
@@ -13,32 +13,43 @@
 
   <main id="newsletter-container">
     <!-- Sign-up form start -->
-    <div id="image-container">
-      <img src="/assets/images/illustration-sign-up-mobile.svg" alt="Newsletter illustration">
-    </div>
-    <div id="content-container">
-      <h1>Stay updated!</h1>
-      <section>
-        <p id="text-container">Join 60,000+ product managers receiving monthly updates on:</p>
-        <ul class="custom-list">
-          <li>Product discovery and building what matters</li>
-          <li>Measuring to ensure updates are a success</li>
-          <li>And much more!</li>
-        </ul>
-      </section>
-      <form id="form">
-        <label for="email">Email address</label>
-        <input id="email" type="email" name="email" placeholder="email@company.com" aria-describedby="email-error" required/>
-        <span aria-live="polite" id="email-error"></span>
-        <input id="button" type="submit" value="Subscribe to monthly newsletter"/>
-      </form>
-    </div>
+    <article>
+      <div id="image-container">
+        <img src="/assets/images/illustration-sign-up-mobile.svg" alt="Newsletter illustration">
+      </div>
+      <div id="content-container">
+        <h1>Stay updated!</h1>
+        <section>
+          <p id="newsletter-text">Join 60,000+ product managers receiving monthly updates on:</p>
+          <ul class="custom-list">
+            <li>Product discovery and building what matters</li>
+            <li>Measuring to ensure updates are a success</li>
+            <li>And much more!</li>
+          </ul>
+        </section>
+        <form id="form">
+          <label for="email">Email address</label>
+          <input id="email" type="email" name="email" placeholder="email@company.com" aria-describedby="email-error" required/>
+          <span aria-live="polite" id="email-error"></span>
+          <button class="button" type="submit">Subscribe to monthly newsletter</button>
+        </form>
+      </div>
+    </article>
     <!-- Sign-up form end -->
     <!-- Success message start -->
-    <!-- Thanks for subscribing!
-    A confirmation email has been sent to ash@loremcompany.com.
-    Please open it and click the button inside to confirm your subscription.
-    Dismiss message -->
+    <article id="success-container">
+      <section id="success-text">
+        <div id="success-svg">
+          <img src="/assets/images/icon-success.svg">
+        </div>
+        <h2>Thanks for subscribing!</h2>
+        <p>
+          A confirmation email has been sent to <strong>ash@loremcompany.com</strong>.
+          Please open it and click the button inside to confirm your subscription.
+        </p>
+      </section>
+      <button class="button" type="submit">Dismiss message</button>
+    </article>
     <!-- Success message end -->
   </main>
 </body>
