--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-  <main id="newsletter-container">
+  <main>
     <!-- Sign-up form start -->
-    <article>
+    <article id="newsletter-container">
       <div id="image-container">
         <img src="/assets/images/illustration-sign-up-mobile.svg" alt="Newsletter illustration">
       </div>
@@ -37,7 +37,7 @@
     </article>
     <!-- Sign-up form end -->
     <!-- Success message start -->
-    <article id="success-container">
+    <article id="success-container" class="hidden">
       <section id="success-text">
         <div id="success-svg">
           <img src="/assets/images/icon-success.svg">
