--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <main>
     <!-- Sign-up form start -->
     <article id="newsletter-container">
-      <div id="image-container">
-        <img src="/assets/images/illustration-sign-up-mobile.svg" alt="Newsletter illustration">
-      </div>
-      <div id="content-container">
+      <picture id="image-container">
+        <source media="(min-width: 48rem)" srcset="assets/images/illustration-sign-up-desktop.svg">
+          <img src="assets/images/illustration-sign-up-mobile.svg" alt="Newsletter illustration">
+      </picture>
+      <div id="newsletter-content">
         <h1>Stay updated!</h1>
         <section>
           <p id="newsletter-text">Join 60,000+ product managers receiving monthly updates on:</p>
@@ -29,7 +30,7 @@
         </section>
         <form id="form">
           <label for="email">Email address</label>
-          <input id="email" type="email" name="email" placeholder="email@company.com" aria-describedby="email-error" required/>
+          <input type="email" name="email" placeholder="email@company.com" aria-describedby="email-error" required/>
           <span aria-live="polite" id="email-error"></span>
           <button class="button" type="submit">Subscribe to monthly newsletter</button>
         </form>
@@ -48,7 +49,7 @@
           Please open it and click the button inside to confirm your subscription.
         </p>
       </section>
-      <button class="button" type="submit">Dismiss message</button>
+      <button class="button dismiss" type="button">Dismiss message</button>
     </article>
     <!-- Success message end -->
   </main>
