--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
             <li>And much more!</li>
           </ul>
         </section>
-        <form id="form">
-          <label for="email">Email address</label>
-          <input type="email" name="email" placeholder="email@company.com" aria-describedby="email-error" required/>
-          <span aria-live="polite" id="email-error"></span>
+        <form id="form" novalidate>
+          <div class="label-row">
+            <label for="email">Email address</label>
+            <span id="error-message" aria-live="polite"></span>
+          </div>
+          <input id="email-address" type="email" name="email" placeholder="email@company.com" aria-describedby="email-error" required/>
           <button class="button" type="submit">Subscribe to monthly newsletter</button>
         </form>
       </div>
