--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
 </head>
 <body>
-
   <main>
-    <!-- Sign-up form start -->
     <article id="newsletter-container">
       <picture id="image-container">
         <source media="(min-width: 48rem)" srcset="assets/images/illustration-sign-up-desktop.svg">
@@ -20,40 +18,38 @@
       </picture>
       <div id="newsletter-content">
         <h1>Stay updated!</h1>
-        <section>
+        <div>
           <p id="newsletter-text">Join 60,000+ product managers receiving monthly updates on:</p>
           <ul class="custom-list">
             <li>Product discovery and building what matters</li>
             <li>Measuring to ensure updates are a success</li>
             <li>And much more!</li>
           </ul>
-        </section>
+        </div>
         <form id="form" novalidate>
           <div class="label-row">
-            <label for="email">Email address</label>
+            <label for="email-address">Email address</label>
             <span id="error-message" aria-live="polite"></span>
           </div>
-          <input id="email-address" type="email" name="email" placeholder="email@company.com" aria-describedby="email-error" required/>
+          <input id="email-address" type="email" name="email" placeholder="email@company.com" aria-describedby="error-message" required>
           <button class="button" type="submit">Subscribe to monthly newsletter</button>
         </form>
       </div>
     </article>
-    <!-- Sign-up form end -->
-    <!-- Success message start -->
+
     <article id="success-container" class="hidden">
-      <section id="success-text">
+      <div id="success-text">
         <div id="success-svg">
-          <img src="/assets/images/icon-success.svg">
+          <img src="/assets/images/icon-success.svg" alt="Checkmark icon" loading="lazy">
         </div>
         <h2>Thanks for subscribing!</h2>
         <p>
-          A confirmation email has been sent to <strong>ash@loremcompany.com</strong>.
+          A confirmation email has been sent to <b>ash@loremcompany.com</b>.
           Please open it and click the button inside to confirm your subscription.
         </p>
-      </section>
+      </div>
       <button class="button dismiss" type="button">Dismiss message</button>
     </article>
-    <!-- Success message end -->
   </main>
 </body>
 </html>
