--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <article id="newsletter-container">
       <picture id="image-container">
         <source media="(min-width: 48rem)" srcset="assets/images/illustration-sign-up-desktop.svg">
-          <img src="assets/images/illustration-sign-up-mobile.svg" alt="Newsletter illustration">
+        <img src="assets/images/illustration-sign-up-mobile.svg" alt="Newsletter illustration">
       </picture>
       <div id="newsletter-content">
         <h1>Stay updated!</h1>
         <div>
-          <p id="newsletter-text">Join 60,000+ product managers receiving monthly updates on:</p>
-          <ul class="custom-list">
+          <p id="list-text">Join 60,000+ product managers receiving monthly updates on:</p>
+          <ul>
             <li>Product discovery and building what matters</li>
             <li>Measuring to ensure updates are a success</li>
             <li>And much more!</li>
           </ul>
         </div>
-        <form id="form" novalidate>
+        <form id="email-form" novalidate>
           <div class="label-row">
             <label for="email-address">Email address</label>
             <span id="error-message" aria-live="polite"></span>
           </div>
-          <input id="email-address" type="email" name="email" placeholder="email@company.com" aria-describedby="error-message" required>
+          <input id="email-address" type="email" name="email" placeholder="email@company.com" required>
           <button class="button" type="submit">Subscribe to monthly newsletter</button>
         </form>
       </div>
@@ -43,10 +43,7 @@
           <img src="assets/images/icon-success.svg" alt="Checkmark icon" loading="lazy">
         </div>
         <h2>Thanks for subscribing!</h2>
-        <p>
-          A confirmation email has been sent to <b>ash@loremcompany.com</b>.
-          Please open it and click the button inside to confirm your subscription.
-        </p>
+        <p>A confirmation email has been sent to <b>ash@loremcompany.com</b>. Please open it and click the button inside to confirm your subscription.</p>
       </div>
       <button class="button dismiss" type="button">Dismiss message</button>
     </article>
